# RGM

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md  release-template.md
.github/workflows/: release.yml
assets/linux/: rgm.desktop
packaging/debian/: postinst  postrm
packaging/rpm/: post_install.sh
src/: app.rs  monitor.rs
