[package]
name = "rgm_ui"
version = "0.2.5"
edition = "2021"
description = "A Rust GPU Monitor with egui UI for NVIDIA and AMD GPUs on Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Xlqmu/RGM"
readme = "README.md"
keywords = ["nvidia", "amd", "gpu", "monitor", "egui"]
categories = ["gui", "hardware-support", "visualization"]

[[bin]]
name = "rgm"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.32.2", features = ["persistence"] }
egui = "0.32.2"
egui_plot = "0.33.0"
nvml-wrapper = "0.11.0"
amdgpu-sysfs = "0.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
crossbeam-channel = "0.5"

[package.metadata.deb]
maintainer = "Xlqmu <xlqmu@github.com>"
copyright = "2026, Xlqmu"
extended-description = "A lightweight GPU monitoring utility with egui UI for NVIDIA and AMD GPUs on Linux"
section = "utils"
priority = "optional"
maintainer-scripts = "packaging/debian"
assets = [
    ["target/release/rgm", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/rgm/", "644"],
    ["assets/linux/rgm.desktop", "usr/share/applications/rgm.desktop", "644"],
    ["assets/icons/rgm.png", "usr/share/icons/hicolor/256x256/apps/rgm.png", "644"],
    ["assets/icons/rgm.svg", "usr/share/icons/hicolor/scalable/apps/rgm.svg", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rgm", dest = "/usr/bin/rgm", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/rgm/README.md", mode = "644" },
    { source = "assets/linux/rgm.desktop", dest = "/usr/share/applications/rgm.desktop", mode = "644" },
    { source = "assets/icons/rgm.png", dest = "/usr/share/icons/hicolor/256x256/apps/rgm.png", mode = "644" },
    { source = "assets/icons/rgm.svg", dest = "/usr/share/icons/hicolor/scalable/apps/rgm.svg", mode = "644" },
]
post_install_script = "packaging/rpm/post_install.sh"
post_uninstall_script = "packaging/rpm/post_uninstall.sh"
